Added chat message room (init)

--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -1,4 +1,12 @@
+.wholeContainer,
+.wholeRow {
+  height: 100vh;
+}
+
 .chatRoomStyling {
   background-color: #fafafa;
-  height: 100vh;
+}
+
+.chatMessagesContainer {
+  height: 525px;
 }
