--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -13,14 +13,21 @@ body {
   font-size: 1.6rem;
 }
 
-.dropdown-toggle:after {
-  border: 0;
-}
-
 .wholeContainer,
 .wholeRow {
   height: 100vh;
   position: relative;
+}
+
+.profilePictureStyling {
+  height: 64px;
+  width: 64px;
+  border-radius: 20px;
+}
+
+.roomUserStyling {
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
 .notificationToast {
