--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -13,6 +13,10 @@ body {
   font-size: 1.6rem;
 }
 
+.menuModalStyling {
+  background-color: #7e98df;
+}
+
 .wholeContainer,
 .wholeRow {
   height: 100vh;
