--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -14,7 +14,8 @@ body {
 }
 
 .menuModalStyling {
-  background-color: #7e98df;
+  border-radius: 30px;
+  max-width: 400px !important;
 }
 
 .wholeContainer,
