Added change password

--- a/src/pages/components/settings/settings.module.css
+++ b/src/pages/components/settings/settings.module.css
@@ -18,6 +18,10 @@
   object-fit: cover;
 }
 
+.changePasswordModalStyling {
+  width: 509px;
+}
+
 .chatRoomStyling {
   background-color: #fafafa;
   position: relative;
