--- a/src/pages/components/list-room/list-room.module.css
+++ b/src/pages/components/list-room/list-room.module.css
@@ -5,6 +5,10 @@
   object-fit: cover;
 }
 
+.topFormControl {
+  border-radius: 15px;
+}
+
 .roomUserStyling {
   margin-left: 6px;
   margin-right: 6px;
