--- a/src/pages/components/contacts/contacts.module.css
+++ b/src/pages/components/contacts/contacts.module.css
@@ -1,3 +1,16 @@
+.profilePictureStyling {
+  height: 64px;
+  width: 64px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.roomUserStyling {
+  margin-left: 6px;
+  margin-right: 6px;
+}
+
+/* PAGINATION */
 .pagination {
   margin: 15px auto;
   display: flex;
@@ -35,3 +48,4 @@
 .pagination > li:last-child > span {
   border-radius: unset;
 }
+/* PAGINATION */
