--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -85,6 +85,14 @@ body {
   padding-top: 10px !important;
 }
 
+.chatMessagesSettingStyling {
+  background-color: transparent;
+}
+
+.chatMessagesSettingStyling:hover {
+  background-color: rgba(126, 152, 223, 0.4);
+}
+
 .roomChatSelect {
   width: 260px;
 }
