--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -114,11 +114,13 @@ body {
 .senderChatBubble {
   background-color: #ffffff;
   display: inline-block;
+  border-radius: 20px 20px 5px 20px;
 }
 
 .receiverChatBubble {
   background-color: #7e98df;
   display: inline-block;
+  border-radius: 20px 20px 20px 5px;
 }
 
 .senderChatHistory {
