--- a/src/pages/components/list-room/list-room.module.css
+++ b/src/pages/components/list-room/list-room.module.css
@@ -1,3 +1,10 @@
+.overflowTextParent {
+  flex: 1;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
 .profilePictureStyling {
   height: 64px;
   width: 64px;
