--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -7,6 +7,24 @@ body {
   color: #7e98df;
 }
 
+/* .modalTransitionEnter {
+  transform: translateX(-100%);
+}
+
+.modalTransitionEnterActive {
+  transition: 300ms;
+  transform: translateX(0);
+}
+
+.modalTransitionExit {
+  transform: translateX(0);
+}
+
+.modalTransitionExitActive {
+  transition: 300ms;
+  transform: translateX(-100%);
+} */
+
 .showMenuIcon {
   color: #7e98df;
   height: 33.594px;
