Fixed bubble chat

--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -162,7 +162,7 @@ body {
 }
 
 .senderChatBubble {
-  background-color: #ffffff;
+  background-color: red;
   display: inline-block;
   border-radius: 20px 20px 20px 20px;
 }
