--- a/src/pages/chat-list/chat-list.module.css
+++ b/src/pages/chat-list/chat-list.module.css
@@ -166,7 +166,7 @@ body {
 }
 
 .senderChatBubble {
-  background-color: red;
+  background-color: #ffffff;
   display: inline-block;
   border-radius: 20px 20px 20px 20px;
 }
