--- a/src/pages/components/MobileMenu/MobileMenu.module.css
+++ b/src/pages/components/MobileMenu/MobileMenu.module.css
@@ -1,7 +1,8 @@
 .background {
-  position: relative;
   background-color: white;
+  position: absolute;
   height: 100vh;
+  width: 100vw;
 }
 
 .boldLogo {
